@@ -1,3 +1,8 @@
+13/11/2011 Changes
+
+Added Block applyTo method argument support.
+
+
 12/11/2011 Changes
 
 Added Block argument (variable) support.
